// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariablesApi VariablesApi - deleteVariable() deleteVariable() 1: Delete variable: esv-volkerstestvariable2 - success 1`] = `
{
  "_id": "esv-volkerstestvariable2",
  "description": "Volker's Updated Test Secret Description",
  "expressionType": "",
  "lastChangeDate": "2022-12-01T00:37:16.388Z",
  "lastChangedBy": "10ecab02-f357-4522-bc17-dfcc64744064",
  "loaded": false,
  "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQ==",
}
`;

exports[`VariablesApi VariablesApi - deleteVariable() deleteVariable() 2: Delete variable: esv-volkerstestvariable3 - error 1`] = `
{
  "code": 404,
  "message": "The variable does not exist",
}
`;

exports[`VariablesApi VariablesApi - getVariable() getVariable() 1: Get existing variable: esv-volkerstestvariable1 1`] = `
{
  "_id": "esv-volkerstestvariable1",
  "description": "variable created for api testing",
  "expressionType": "",
  "lastChangeDate": "2022-11-30T00:13:52.478Z",
  "lastChangedBy": "10ecab02-f357-4522-bc17-dfcc64744064",
  "loaded": true,
  "valueBase64": "Zm9yIGplc3Q=",
}
`;

exports[`VariablesApi VariablesApi - getVariable() getVariable() 2: Get non-existing variable: esv-does-not-exist 1`] = `
{
  "code": 404,
  "message": "The variable does not exist",
}
`;

exports[`VariablesApi VariablesApi - getVariables() getVariables() 1: Get all variables - success 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "esv-volkerstestvariable1",
      "description": "variable created for api testing",
      "expressionType": "",
      "lastChangeDate": "2022-11-30T00:13:52.478Z",
      "lastChangedBy": "10ecab02-f357-4522-bc17-dfcc64744064",
      "loaded": true,
      "valueBase64": "Zm9yIGplc3Q=",
    },
    {
      "_id": "esv-test-var",
      "description": "this is a test description",
      "expressionType": "",
      "lastChangeDate": "2022-09-02T04:23:56.075Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "valueBase64": "dGhpcyBpcyBhIHRlc3QgdmFyaWFibGU=",
    },
    {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules:
{
  "allow": [
    "address/mask"
  ]
}",
      "expressionType": "",
      "lastChangeDate": "2022-08-25T22:54:28.551Z",
      "lastChangedBy": "8efaa5b6-8c98-4489-9b21-ee41f5589ab7",
      "loaded": true,
      "valueBase64": "eyAgImFsbG93IjogWyAgICAiMTUwLjEyOC4wLjAvMTYiLCAgICAiMTM5LjM1LjAuMC8xNiIsICAgICIxMDEuMjE2LjAuMC8xNiIsICAgICI5OS43Mi4yOC4xODIvMzIiICBdfQ==",
    },
  ],
  "resultCount": 3,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`VariablesApi VariablesApi - putVariable() putVariable() 1: Create variable: esv-volkerstestvariable2 - success 1`] = `
{
  "_id": "esv-volkerstestvariable2",
  "description": "Volker's Test Variable Description",
  "expressionType": "",
  "lastChangeDate": "2022-12-01T00:37:14.740Z",
  "lastChangedBy": "10ecab02-f357-4522-bc17-dfcc64744064",
  "loaded": false,
  "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQ==",
}
`;

exports[`VariablesApi VariablesApi - setVariableDescription() setVariableDescription() 1: Set variable description: esv-volkerstestvariable2 - success 1`] = `""`;

exports[`VariablesApi VariablesApi - setVariableDescription() setVariableDescription() 2: Set variable description: esv-volkerstestvariable3 - error 1`] = `
{
  "code": 404,
  "message": "The variable does not exist",
}
`;
